About: A basic hurricane simulator made for the Hypothetical Hurricanes Wiki. Soon to be more advanced.

v20181112a:
    * Large change to storm algorithm to make seasons less hyperactive and somewhat more realistic
        > Looks to need to be ironed out quite a bit over the next few verisons
v20181111a:
    * Big improvement to upper-level steering to make it less drunk and more realistic
v20181110a:
    + Added a currently-very-drunken upper-level steering field
    * Storm steering algorithm changed to follow both upper and lower-level steering based on strength and if extratropical
        > True "wind shear" not quite added yet as storms don't yet weaken
v20181109b:
    + Readded environmental wobble
    * Optimized environmental fields for future saving & loading of basins
v20181109a:
    * Changed snow-rendering algorithm for faster and more efficient rendering
v20181105a:
    + Added code for a graphical shader that gives land some shadows and visible depth
        > Disabled until user settings are added since it increases render times
    * Adjustments to SST anomalies to use a more logarithmic system, and have greater anomalies closer to the poles
    * Definition SST values for equatorward and poleward edges at peak-season and peak-off-season moved to constants.js
v20181102a:
    * Reworked land to work more efficiently with cleaner code
    * SST map layers now render more nicely with the land and are now less laggy when the sim is running
    * Clicking the map layer text/button in the bottom now rotates through the map layers
    * The data displayed in the map layer button now shows that at the position of the selected storm if one is selected
        > includes indicator for if the data is "@ mouse pointer / finger" or "@ selected storm"
        > if the selected storm is not active at the time viewed in analysis, data for the mouse pointer / finger is displayed
v20181031a:
    + Added sea surface temperature